--- a/HRManagment1/Views/Applicants/Create.cshtml
+++ b/HRManagment1/Views/Applicants/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model HRManagment1.Models.Applicant
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "My Profile";
 }
 
-<h1>Create</h1>
+<h1>My Profile</h1>
 
 <h4>Applicant</h4>
 <hr />
@@ -39,9 +39,9 @@
     </div>
 </div>
 
-<div>
+@* <div>
     <a asp-action="Index">Back to List</a>
-</div>
+</div> *@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
