--- a/HRManagment1/Views/Employees/Index.cshtml
+++ b/HRManagment1/Views/Employees/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.EmployeeId)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.FirstName)
             </th>
             <th>
@@ -36,6 +39,10 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.EmployeeId)
+                </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
             </td>
