--- a/HRManagment1/Views/Departments/Details.cshtml
+++ b/HRManagment1/Views/Departments/Details.cshtml
@@ -16,12 +16,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
+        @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Employee)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Employee.EmployeeId)
-        </dd>
+        </dd> *@
     </dl>
 </div>
 <div>
